Enforcing XeTeX usage
kappak will now throw an error if xetex is not used to compile it.

--- a/src/kappak.sty
+++ b/src/kappak.sty
@@ -39,6 +39,14 @@
 %% -----------------------------------------------------------------------------
 
 %% ----------------------------------------
+%% Require XeTeX
+%% ----------------------------------------
+
+\RequirePackage{iftex}
+
+\RequireXeTeX
+
+%% ----------------------------------------
 %% Required packages
 %% ----------------------------------------
 
