--- a/src/kappak.sty
+++ b/src/kappak.sty
@@ -2555,7 +2555,7 @@
                 \displaystyle{#1} \@ampersand \displaystyle{#2} \\
                 \displaystyle{#3} \@ampersand \displaystyle{#4} \\
             };
-            \path (m-1-1) edge [-, draw = white] node [very near end] {\LARGE $\ulcorner$} (m-2-2);
+            \path (m-1-1) edge [-, draw = white] node [very near end] {$\ulcorner$} (m-2-2);
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$#6$} (m-2-1);
             \path [\@diagAC] (m-1-2) edge [\@diagLC] node [right] {$#7$} (m-2-2);
@@ -2578,7 +2578,7 @@
                 \displaystyle{#1} \@ampersand \displaystyle{#2} \\
                 \displaystyle{#3} \@ampersand \displaystyle{#4} \\
             };
-            \path (m-1-1) edge [-, draw = white] node [very near start] {\LARGE $\lrcorner$} (m-2-2);
+            \path (m-1-1) edge [-, draw = white] node [very near start] {$\lrcorner$} (m-2-2);
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$#6$} (m-2-1);
             \path [\@diagAC] (m-1-2) edge [\@diagLC] node [right] {$#7$} (m-2-2);
