Stop enforcing XeTeX :'(

--- a/src/kappak.sty
+++ b/src/kappak.sty
@@ -44,9 +44,9 @@
 %% Require XeTeX
 %% ----------------------------------------
 
-\RequirePackage{iftex}
+% \RequirePackage{iftex}
 
-\RequireXeTeX
+% \RequireXeTeX
 
 %% ----------------------------------------
 %% Required packages
