[fix] draft mode

--- a/src/kappak.sty
+++ b/src/kappak.sty
@@ -62,7 +62,7 @@
 \ifdraft{
     \RequirePackage{draftwatermark}
     \RequirePackage[mathlines]{lineno}
-    \RequirePackage{showkeys}
+    \RequirePackage[notcite, notref]{showkeys}
     \SetWatermarkLightness{0.95}
     \linenumbers
 }{}
