Improved pullback and pushout
Label of lower arrow is now on top

--- a/src/kappak.sty
+++ b/src/kappak.sty
@@ -4223,7 +4223,7 @@
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$\scriptstyle{#5}$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$\scriptstyle{#6}$} (m-2-1);
             \path [\@diagAC] (m-1-2) edge [\@diagLC] node [right] {$\scriptstyle{#7}$} (m-2-2);
-            \path [\@diagAD] (m-2-1) edge [\@diagLD] node [below] {$\scriptstyle{#8}$} (m-2-2);
+            \path [\@diagAD] (m-2-1) edge [\@diagLD] node [above] {$\scriptstyle{#8}$} (m-2-2);
         \end{tikzpicture}
     }
 
@@ -4247,7 +4247,7 @@
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$\scriptstyle{#5}$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$\scriptstyle{#6}$} (m-2-1);
             \path [\@diagAC] (m-1-2) edge [\@diagLC] node [right] {$\scriptstyle{#7}$} (m-2-2);
-            \path [\@diagAD] (m-2-1) edge [\@diagLD] node [below] {$\scriptstyle{#8}$} (m-2-2);
+            \path [\@diagAD] (m-2-1) edge [\@diagLD] node [above] {$\scriptstyle{#8}$} (m-2-2);
         \end{tikzpicture}
     }
 
