Removed the dedication environment

--- a/src/kappak.sty
+++ b/src/kappak.sty
@@ -5106,18 +5106,18 @@
         \hfill\ensuremath{\blacksquare}\endtrivlist\@endpefalse
     }
 
-    % env dedication: The \texttt{dedication} environment.
-    \newenvironment{dedication}{
-        \cleardoublepage
-        \thispagestyle{empty}
-        \vspace*{\stretch{1}}
-        \hfill\begin{minipage}[t]{0.66\textwidth}
-        \raggedright
-    }{
-        \end{minipage}
-        \vspace*{\stretch{3}}
-        \clearpage
-    } % \newenvironment{dedication}{
+    % % env dedication: The \texttt{dedication} environment.
+    % \newenvironment{dedication}{
+    %     \cleardoublepage
+    %     \thispagestyle{empty}
+    %     \vspace*{\stretch{1}}
+    %     \hfill\begin{minipage}[t]{0.66\textwidth}
+    %     \raggedright
+    % }{
+    %     \end{minipage}
+    %     \vspace*{\stretch{3}}
+    %     \clearpage
+    % } % \newenvironment{dedication}{
 
     \aliascntresetthe{assertion}
     \aliascntresetthe{axiom}
