[bugfix] internal command @numberTheoremsWithin is now always defined

--- a/src/kappak.sty
+++ b/src/kappak.sty
@@ -156,25 +156,27 @@
 %% ----------------------------------------
 
 % int @bbStyle:
-\def\@bbStyle           {normal}
+\def\@bbStyle               {normal}
 % int @bibliographyStyle:
-\def\@bibliographyStyle {plain}
-% int @chapterStyle:
-\def\@chapterStyle      {normal}
-% int @fontSet:
-\def\@fontSet           {normal}
-% int @headerFooterStyle:
-\def\@headerFooterStyle {normal}
-% int @language:
-\def\@language          {english}
-% int @margins:
-\def\@margins           {normal}
-% int @scriptStyle:
-\def\@scriptStyle       {normal}
-% int @titlePageStyle:
-\def\@titlePageStyle    {normal}
+\def\@bibliographyStyle     {plain}
 % int @categoryStyle:
-\def\@categoryStyle     {script}
+\def\@categoryStyle         {script}
+% int @chapterStyle:
+\def\@chapterStyle          {normal}
+% int @fontSet:
+\def\@fontSet               {normal}
+% int @headerFooterStyle:
+\def\@headerFooterStyle     {normal}
+% int @language:
+\def\@language              {english}
+% int @margins:
+\def\@margins               {normal}
+% int @numberTheoremsWithin
+\def\@numberTheoremsWithin  {section}
+% int @scriptStyle:
+\def\@scriptStyle           {normal}
+% int @titlePageStyle:
+\def\@titlePageStyle        {normal}
 
 %% -----------------------------------------------------------------------------
 %%
