First template based implementation

--- a/test/test.tex
+++ b/test/test.tex
@@ -1,14 +1,14 @@
 \documentclass[draft]{article}
 
 \usepackage[
-	eientei,	
+	eientei,
 	+maths,
 	+tikz,
 	bbStyle       = bbold,
-	categoryStyle = script,	
+	categoryStyle = script,
 	scriptStyle   = euler,
 	margins       = small
-]{kappak}
+]{kappak-article}
 
 \title{\texttt{kappak} test}
 \author{Me}
